# logis

./: Justfile  README.md  pyproject.toml
logis/: __init__.py  config.py  decorator.py  error.py
logis/cli/: app.py
logis/cli/commands/: query.py
logis/domain/: experiment.py  git.py  query.py  repository.py
logis/service/: codebase.py  experiment.py  git.py  query.py
logis/util/: di.py  model.py
mthd/: __init__.py  config.py  decorator.py  error.py
mthd/cli/: app.py
mthd/cli/commands/: query.py
mthd/domain/: commit.py  experiment.py  git.py  query.py  repository.py
mthd/service/: git.py  query.py  repository.py
mthd/util/: di.py
tests/e2e/: e2e_test.py
tests/unit/domain/: commit_test.py
tests/unit/service/: query_test.py
