[project]
name = "logis"
description = "Git-based experiment tracking with semantic metadata."
authors = [
    { name = "Rory Byrne", email = "rory@rory.bio" }
]
requires-python = ">=3.10"
dependencies = [
    "anot>=0.0.6",
    "click>=8.1.8",
    "dishka>=1.4.2",
    "gitpython>=3.1.44",
    "jmespath>=1.0.1",
    "pydantic>=2.10.5",
    "rich>=13.9.4",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    'Intended Audience :: Information Technology',
    "Typing :: Typed",
]
license = "MIT"
readme = "README.md"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/flywhl/logis"
Repository = "https://github.com/flywhl/logis"
Documentation = "https://github.com/flywhl/logis#readme"
"Bug Tracker" = "https://github.com/flywhl/logis/issues"

[project.scripts]
logis = "logis.cli.app:start"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.9",
    "pre-commit>=4.0.1",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
    "pyright>=1.1.392.post0",
]

[tool.ruff]
src = ["logis"]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["logis"]
relative-imports-order = "closest-to-furthest"
lines-between-types = 1
